--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
       A front-end developer architects and develops websites and applications
       using web technologies:
     </p>
-    <p>
-      A front-end developer architects and develops websites and applications
-      using web technologies:
-    </p>
+    <p>New Paragraph!</p>
 
     <ul>
       <li style="color: red">HTML</li>
       <li style="color: green">CSS</li>
       <li style="color: blue">JavaScript</li>
     </ul>
-
-    <p id="date-time"></p>
-
-    <!-- <script src="ita21.js"></script> -->
   </body>
 </html>
